# litescribe

./: .gitignore  .pre-commit-config.yaml
backend/gateway/: pyproject.toml
backend/shared/: pyproject.toml
backend/shared/src/litescribe_shared/: dto.py  serialization.py
backend/shared/src/litescriber_shared/: config_utils.py  serialization.py
backend/worker/: Dockerfile  pyproject.toml
backend/worker/src/litescribe_worker/: __main__.py  config.py  consumer.py  gateway_client.py  transcriber.py
backend/worker/src/litescriber_worker/: __main__.py  config.py  consumer.py  gateway_client.py  rabbitmq_helper.py
